crates/ruff_linter/src/rules/sqlalchemy/snapshots/ruff_linter__rules__sqlalchemy__tests__SA201_SA201.py.snap
---
source: crates/ruff_linter/src/rules/sqlalchemy/mod.rs
---
SA201.py:52:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
50 |     __tablename__ = "company"
51 |
52 |     id = mapped_column(Integer, primary_key=True)
   |     ^^ SA201
53 |     employees = relationship("Employee", back_populates="company")
   |

SA201.py:53:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
52 |     id = mapped_column(Integer, primary_key=True)
53 |     employees = relationship("Employee", back_populates="company")
   |     ^^^^^^^^^ SA201
54 |
55 |     name = mapped_column(String)
   |

SA201.py:55:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
53 |     employees = relationship("Employee", back_populates="company")
54 |
55 |     name = mapped_column(String)
   |     ^^^^ SA201
56 |     company_name = synonym("name")
   |

SA201.py:56:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
55 |     name = mapped_column(String)
56 |     company_name = synonym("name")
   |     ^^^^^^^^^^^^ SA201
   |

SA201.py:62:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
60 |     __tablename__ = "employee"
61 |
62 |     id = mapped_column(Integer, primary_key=True)
   |     ^^ SA201
63 |     company_id = mapped_column(ForeignKey("company.id"))
64 |     company = relationship("Company", back_populates="employees")
   |

SA201.py:63:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
62 |     id = mapped_column(Integer, primary_key=True)
63 |     company_id = mapped_column(ForeignKey("company.id"))
   |     ^^^^^^^^^^ SA201
64 |     company = relationship("Company", back_populates="employees")
   |

SA201.py:64:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
62 |     id = mapped_column(Integer, primary_key=True)
63 |     company_id = mapped_column(ForeignKey("company.id"))
64 |     company = relationship("Company", back_populates="employees")
   |     ^^^^^^^ SA201
65 |
66 |     company_name = association_proxy("company", "name")
   |

SA201.py:66:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
64 |     company = relationship("Company", back_populates="employees")
65 |
66 |     company_name = association_proxy("company", "name")
   |     ^^^^^^^^^^^^ SA201
67 |
68 |     first_name = mapped_column(String)
   |

SA201.py:68:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
66 |     company_name = association_proxy("company", "name")
67 |
68 |     first_name = mapped_column(String)
   |     ^^^^^^^^^^ SA201
69 |     last_name = mapped_column(String)
   |

SA201.py:69:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
68 |     first_name = mapped_column(String)
69 |     last_name = mapped_column(String)
   |     ^^^^^^^^^ SA201
70 |
71 |     name_length = column_property(func.length(first_name + last_name))
   |

SA201.py:71:5: SA201 Missing `Mapped` or other ORM container class type annotation
   |
69 |     last_name = mapped_column(String)
70 |
71 |     name_length = column_property(func.length(first_name + last_name))
   |     ^^^^^^^^^^^ SA201
   |
